--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://msant262.github.io/react-test-bench",
   "name": "react-test-bench",
   "version": "4.0.3-0",
   "private": true,
